--- a/src/main/webapp/WEB-INF/t/Layout.html
+++ b/src/main/webapp/WEB-INF/t/Layout.html
@@ -21,6 +21,7 @@
 
     <script type="text/javascript" src="#springUrl('/js/jquery-1.4.2.min.js')"></script>
     <script type="text/javascript" src="#springUrl('/js/jquery-ui-1.8.4.custom.min.js')"></script>
+    <script type="text/javascript" src="#springUrl('/js/jquery.tools.min.js')"></script>
     <script type="text/javascript" src="#springUrl('/js/Dialog.js')"></script>
     <script type="text/javascript" src="#springUrl('/js/FormDialog.js')"></script>
     <script type="text/javascript" src="#springUrl('/js/Clickable.js')"></script>
