--- a/src/main/webapp/WEB-INF/t/CheckoutInfo.html
+++ b/src/main/webapp/WEB-INF/t/CheckoutInfo.html
@@ -5,7 +5,7 @@
     <div id="checkoutHeader">
       <h1>Express Checkout</h1>
       <p>Please enter your details below to complete your purchase.</p>
-      <a href="#">Already registered? Click here to login.</a>
+      <a href="https://qa.maxglobalcorp.com/store/login?#">Already registered? Click here to login.</a>
     </div>
     <div id="columns">
       <div id="checkout-col1">
